# kairo

./: AGENTS.md  Cargo.toml  README.md
docs/: blocked.md  (+5 more)
kairo-next/crates/kairo/: Cargo.toml
kairo-next/crates/kairo-actor-macros/: Cargo.toml
kairo-next/crates/kairo-actor-macros/src/: lib.rs
kairo-next/crates/kairo-actor-macros/tests/: remote_message.rs
kairo-next/crates/kairo-cluster/: Cargo.toml
kairo-next/crates/kairo-cluster-sharding/: Cargo.toml
kairo-next/crates/kairo-cluster-sharding/src/: allocation.rs  bootstrap.rs  codec.rs  coordinator.rs  coordinator_actor.rs  coordinator_discovery.rs  coordinator_handoff.rs  coordinator_remote_home.rs  coordinator_remote_regions.rs  coordinator_remote_registration.rs  coordinator_remote_reply.rs  coordinator_remote_shutdown.rs  coordinator_remote_target.rs  coordinator_runtime.rs  coordinator_store.rs  coordinator_system_inbound.rs  entity_factory.rs  entity_ref.rs  entity_router.rs  entity_shard_actor.rs  entity_type.rs  envelope.rs  errors.rs  extension.rs  extractor.rs  handoff_transport.rs  handoff_worker.rs  hashing.rs  lib.rs  protocol.rs  region_actor.rs  region_bootstrap.rs  region_coordinator_discovery.rs  region_discovery_subscriber.rs  region_home_requests.rs  region_protocol.rs  region_registration.rs  region_remote_coordinator.rs  region_remote_coordinator_transport.rs  region_remote_handoff.rs  (+14 more)
kairo-next/crates/kairo-cluster-sharding/src/codec/: coordinator.rs  mod.rs  routing.rs  shard.rs  shutdown.rs  tests.rs  wire.rs
kairo-next/crates/kairo-cluster-sharding/src/coordinator_actor/: construction.rs  remember_store.rs
kairo-next/crates/kairo-cluster-sharding/src/coordinator_system_inbound/: tests.rs
kairo-next/crates/kairo-cluster-sharding/src/extension/: connector.rs  tests.rs
kairo-next/crates/kairo-cluster-sharding/src/region_actor/: construction.rs  coordinator_flow.rs  local_routing.rs  remote_lifecycle.rs
kairo-next/crates/kairo-cluster-sharding/src/region_remote/: control.rs  error.rs  inbound.rs  mod.rs  outbound.rs
kairo-next/crates/kairo-cluster-sharding/src/region_system_inbound/: tests.rs
kairo-next/crates/kairo-cluster-sharding/src/tests/: allocation.rs  coordinator_actor.rs  coordinator_runtime.rs  coordinator_state.rs  entity_routing.rs  entity_shard_actor.rs  handoff_orchestration.rs  handoff_transport.rs  region_actor_handoff.rs  region_actor_local.rs  region_discovery_subscriber.rs  region_registration.rs  region_remote_coordinator_actor.rs  region_route_resolution.rs  region_runtime.rs  remember.rs  shard_actor.rs  shard_remember_runtime.rs  shard_runtime.rs
kairo-next/crates/kairo-cluster-sharding/tests/: wire_compatibility.rs
kairo-next/crates/kairo-cluster-sharding/tests/fixtures/: coordinator-ref-v1.hex  region-ref-v1.hex  routed-shard-envelope-v1.hex  shard-home-v1.hex  shard-id-v1.hex
kairo-next/crates/kairo-cluster/src/: app_version.rs  association_peers.rs  cluster.rs  codec.rs  convergence.rs  daemon_bootstrap.rs  downing.rs  downing_provider.rs  event_publisher.rs  events.rs  extension.rs  failure_detector.rs  gossip.rs  gossip_process.rs  heartbeat.rs  heartbeat_actor.rs  heartbeat_connector.rs  heartbeat_remote.rs  init_join_responder.rs  leader.rs  leader_actions.rs  leave_coordinator.rs  lib.rs  member.rs  membership_actor.rs  protocol.rs  reachability.rs  remote.rs  remote_peer_connector.rs  remote_tcp.rs  seed_join.rs  seed_join_actor.rs  seed_join_wire.rs  shared_remote_runtime.rs  shared_remote_runtime_tests.rs  tcp_membership_downing.rs  tcp_peer_bootstrap.rs  tcp_peer_connector.rs  tcp_peer_reconnect.rs  tcp_peer_routes.rs  (+4 more)
kairo-next/crates/kairo-cluster/src/codec/: control.rs  daemon.rs  gossip.rs  mod.rs  tests.rs  wire.rs
kairo-next/crates/kairo-cluster/src/downing/: lease_majority.rs  split_brain.rs  tests.rs
kairo-next/crates/kairo-cluster/src/downing_provider/: tests.rs
kairo-next/crates/kairo-cluster/tests/: wire_compatibility.rs
kairo-next/crates/kairo-distributed-data/: Cargo.toml
kairo-next/crates/kairo-distributed-data/src/: aggregation.rs  aggregation_actor.rs  aggregation_operation.rs  aggregation_session.rs  aggregation_transport.rs  aggregation_wire.rs  cluster_connector_timing.rs  cluster_routes.rs  cluster_subscription.rs  codec.rs  consistency.rs  crdt_codec.rs  data.rs  delta.rs  delta_loop.rs  delta_receive.rs  delta_transport.rs  delta_wire.rs  envelope.rs  errors.rs  extension.rs  gcounter.rs  gossip.rs  gossip_transport.rs  gset.rs  key.rs  lib.rs  lww_register.rs  ormap.rs  orset.rs  pncounter.rs  protocol.rs  pruning.rs  read_write_receive.rs  remote_association.rs  remote_association_inbound.rs  remote_envelope.rs  remote_reply.rs  remote_request.rs  remote_request_registry.rs  (+16 more)
kairo-next/crates/kairo-distributed-data/tests/: wire_compatibility.rs
kairo-next/crates/kairo-remote/: Cargo.toml
kairo-next/crates/kairo-remote/src/: association.rs  association_cache.rs  association_inbound.rs  association_outbound.rs  association_pipeline.rs  association_registry.rs  association_routes.rs  codec.rs  error.rs  frame.rs  inbound.rs  inbound_router.rs  lanes.rs  lib.rs  local_address.rs  local_delivery.rs  outbound.rs  protocol.rs  provider.rs  reliable_delivery.rs  reliable_runtime.rs  remote_ref.rs  remote_watch.rs  remote_watch_actor.rs  remote_watch_effects.rs  remote_watch_inbound.rs  remote_watch_system_inbound.rs  resolved_ref.rs  settings.rs  stream.rs  stream_inbound.rs  stream_sink.rs  system_inbound.rs  tcp.rs  tcp_runtime.rs  transport.rs
kairo-next/crates/kairo-remote/tests/: process_remoting.rs  wire_compatibility.rs
kairo-next/crates/kairo-serialization/: Cargo.toml
kairo-next/crates/kairo-serialization/src/: actor_ref.rs  codec.rs  envelope.rs  errors.rs  lib.rs  manifest.rs  message.rs  registry.rs  tests.rs  wire.rs
kairo-next/crates/kairo-testkit/: Cargo.toml
kairo-next/crates/kairo-testkit/src/: actor_harness.rs  assertions.rs  fishing.rs  lib.rs  manual_time.rs  multi_node.rs  probe.rs  system.rs  tests.rs  within.rs
kairo-next/crates/kairo/src/: lib.rs  observability.rs  tests.rs
(+353 files in other folders)
