[workspace]
members = ["kairo-next/crates/*"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mikai233/kairo"

[workspace.dependencies]
kairo-actor = { path = "kairo-next/crates/kairo-actor" }
kairo-actor-macros = { path = "kairo-next/crates/kairo-actor-macros" }
kairo-serialization = { path = "kairo-next/crates/kairo-serialization" }
kairo-remote = { path = "kairo-next/crates/kairo-remote" }
kairo-cluster = { path = "kairo-next/crates/kairo-cluster" }
kairo-distributed-data = { path = "kairo-next/crates/kairo-distributed-data" }
kairo-cluster-tools = { path = "kairo-next/crates/kairo-cluster-tools" }
kairo-cluster-sharding = { path = "kairo-next/crates/kairo-cluster-sharding" }
kairo-testkit = { path = "kairo-next/crates/kairo-testkit" }
bytes = "1.5"
thiserror = "2.0"

[profile.release]
debug = "line-tables-only"
