[workspace]
members = ["kairo-next/crates/*"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/mikai233/kairo"

[workspace.dependencies]
kairo-actor = { version = "0.1.0", path = "kairo-next/crates/kairo-actor" }
kairo-actor-macros = { version = "0.1.0", path = "kairo-next/crates/kairo-actor-macros" }
kairo-serialization = { version = "0.1.0", path = "kairo-next/crates/kairo-serialization" }
kairo-remote = { version = "0.1.0", path = "kairo-next/crates/kairo-remote" }
kairo-cluster = { version = "0.1.0", path = "kairo-next/crates/kairo-cluster" }
kairo-distributed-data = { version = "0.1.0", path = "kairo-next/crates/kairo-distributed-data" }
kairo-cluster-tools = { version = "0.1.0", path = "kairo-next/crates/kairo-cluster-tools" }
kairo-cluster-sharding = { version = "0.1.0", path = "kairo-next/crates/kairo-cluster-sharding" }
kairo-testkit = { version = "0.1.0", path = "kairo-next/crates/kairo-testkit" }
bytes = "1.11"
sha1 = "0.11"
thiserror = "2.0"
toml = "1.1"

[profile.release]
debug = "line-tables-only"
