[package]
name = "kairo-actor-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "parsing"] }

[dev-dependencies]
kairo-serialization = { workspace = true }
