[package]
name = "kairo-actor-macros"
description = "Derive macros for stable Kairo remote-message metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "3", features = ["derive", "parsing"] }

[dev-dependencies]
kairo-serialization = { workspace = true }
