[package]
name = "kairo-cluster-sharding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
kairo-actor = { workspace = true }
kairo-cluster = { workspace = true }
kairo-distributed-data = { workspace = true }
kairo-remote = { workspace = true }
kairo-serialization = { workspace = true }

[dev-dependencies]
kairo-testkit = { workspace = true }
