[package]
name = "kairo-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
kairo-actor = { workspace = true }
kairo-remote = { workspace = true }
kairo-serialization = { workspace = true }
sha1 = { workspace = true }

[dev-dependencies]
kairo-testkit = { workspace = true }
