[package]
name = "kairo-cluster"
description = "Gossip-based cluster membership and failure detection for Kairo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
kairo-actor = { workspace = true }
kairo-remote = { workspace = true }
kairo-serialization = { workspace = true }
sha1 = { workspace = true }

[dev-dependencies]
kairo-testkit = { workspace = true }
