[package]
name = "kairo-distributed-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
kairo-actor = { workspace = true }
kairo-cluster = { workspace = true }
kairo-serialization = { workspace = true }
