[package]
name = "kairo-distributed-data"
description = "Typed CRDT replication over Kairo cluster membership"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
kairo-actor = { workspace = true }
kairo-cluster = { workspace = true }
kairo-remote = { workspace = true }
kairo-serialization = { workspace = true }

[dev-dependencies]
kairo-testkit = { workspace = true }
