[package]
name = "kairo-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kairo-actor = { workspace = true }
kairo-serialization = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
