[package]
name = "kairo-remote"
description = "Typed remote actor references and TCP associations for Kairo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
kairo-actor = { workspace = true }
kairo-serialization = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
kairo-testkit = { workspace = true }
