[package]
name = "kairo-serialization"
description = "Stable manifests, codec registration, and wire envelopes for Kairo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
