[package]
name = "kairo-testkit"
description = "Deterministic probes, manual time, and actor test utilities for Kairo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kairo-actor = { workspace = true }
